feat : 백그라운드 알림

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
             });
         });
       } else {
-        // 서비스 워커 등록 실패 시, fallback 이미지 등장
-        // 서비스 워커 등록 실패 시, fallback 이미지 등장
-        // 서비스 워커 등록 실패 시, fallback 이미지 등장
-        console.log("비스 워커 등록 실패 시, fallback 이미지 등장")
+        console.log("서비스 워커 등록 실패 시, fallback 이미지 등장")
       }
     </script>
   </body>
